--- a/_config.yml
+++ b/_config.yml
@@ -65,8 +65,8 @@ repository_tree: master
 ##############################
 paths:
   root    : / # title link url, "/" (default)
-  home    : / # home layout url, "/" (default)
-  archive : /archive.html # "/archive.html" (default)
+  home    : /blog # home layout url, "/" (default)
+  archive : /blog/archive.html # "/archive.html" (default)
   rss     : /feed.xml # "/feed.xml" (default)
 
 
