--- a/_config.yml
+++ b/_config.yml
@@ -98,8 +98,8 @@ chart: true # false (default), true
 
 ## => Paginate
 ##############################
-paginate: 8
-paginate_path: /page:num # don't change this unless for special need
+paginate: 7
+paginate_path: /blog/page:num # don't change this unless for special need
 
 
 ## => Sources
