Add Journal Club section

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,55 +2,24 @@ header:
   - titles:
       zh-Hans : &ZH_HANS  博客
       en      : &EN       Blog
+      ja      : &JA       ブログ
+    url:        /blog/
+  - titles:
+      zh-Hans : &ZH_HANS  文献研讨会
+      en      : &EN       Journal Club
+      ja      : &JA       抄読会
     url:        /blog/
   - titles:
       # @start locale config
       en      : &EN       Archive
-      en-GB   : *EN
-      en-US   : *EN
-      en-CA   : *EN
-      en-AU   : *EN
       zh-Hans : &ZH_HANS  归档
-      zh      : *ZH_HANS
-      zh-CN   : *ZH_HANS
-      zh-SG   : *ZH_HANS
-      zh-Hant : &ZH_HANT  歸檔
-      zh-TW   : *ZH_HANT
-      zh-HK   : *ZH_HANT
-      ko      : &KO       아카이브
-      ko-KR   : *KO
-      fr      : &FR       Archives
-      fr-BE   : *FR
-      fr-CA   : *FR
-      fr-CH   : *FR
-      fr-FR   : *FR
-      fr-LU   : *FR
-      tr      : &TR       Arşivdekiler
+      ja      : &JA       アーカイブ
       # @end locale config
     url: /blog/archive.html
-
   - titles:
       # @start locale config
       en      : &EN       About
-      en-GB   : *EN
-      en-US   : *EN
-      en-CA   : *EN
-      en-AU   : *EN
       zh-Hans : &ZH_HANS  关于
-      zh      : *ZH_HANS
-      zh-CN   : *ZH_HANS
-      zh-SG   : *ZH_HANS
-      zh-Hant : &ZH_HANT  關於
-      zh-TW   : *ZH_HANT
-      zh-HK   : *ZH_HANT
-      ko      : &KO       소개
-      ko-KR   : *KO
-      fr      : &FR       À propos
-      fr-BE   : *FR
-      fr-CA   : *FR
-      fr-CH   : *FR
-      fr-FR   : *FR
-      fr-LU   : *FR
-      tr      : &TR       Hakkında
+      ja      : &JA       サイトについて
       # @end locale config
     url: /README.html
