--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,7 +8,7 @@ header:
       zh-Hans : &ZH_HANS  文献研讨会
       en      : &EN       Journal Club
       ja      : &JA       抄読会
-    url:        /categories/journalclub/
+    url:        /journalclub/
   - titles:
       # @start locale config
       en      : &EN       Archive
