--- a/_data/locale.yml
+++ b/_data/locale.yml
@@ -14,7 +14,7 @@ en: &EN
   ARTICLE_LIST_DATE_FORMAT: "%b %d"
   STATISTICS              : "[POST_COUNT] post articles, [PAGE_COUNT] pages."
   LICENSE_ANNOUNCE        : "This work is licensed under a [LICENSE] license."
-  POST_ON_GITHUB          : "Edit on Github"
+  POST_ON_GITHUB          : "Edit on GitHub"
   FOLLOW_ME               : "Follow me on [NAME]."
   FOLLOW_US               : "Follow us on [NAME]."
   EMAIL_ME                : "Send me an Email."
@@ -45,7 +45,7 @@ zh-Hans: &ZH_HANS
   ARTICLE_LIST_DATE_FORMAT: "%m月%d日"
   STATISTICS              : "共计 [POST_COUNT] 篇文章，[PAGE_COUNT] 页。"
   LICENSE_ANNOUNCE        : "本文遵守 [LICENSE] 许可协议。"
-  POST_ON_GITHUB          : "在 Github 上修改"
+  POST_ON_GITHUB          : "在 GitHub 上修改"
   FOLLOW_ME               : "在 [NAME] 上关注我。"
   FOLLOW_US               : "在 [NAME] 上关注我们。"
   EMAIL_ME                : "给我发邮件。"
@@ -74,7 +74,7 @@ zh-Hant: &ZH_HANT
   ARTICLE_LIST_DATE_FORMAT: "%m月%d日"
   STATISTICS              : "共計 [POST_COUNT] 篇文章，[PAGE_COUNT] 頁。"
   LICENSE_ANNOUNCE        : "本文遵守 [LICENSE] 許可協議。"
-  POST_ON_GITHUB          : "在 Github 上修改"
+  POST_ON_GITHUB          : "在 GitHub 上修改"
   FOLLOW_ME               : "在 [NAME] 上關注我。"
   FOLLOW_US               : "在 [NAME] 上關注我們。"
   EMAIL_ME                : "給我發郵件。"
@@ -101,7 +101,7 @@ ko: &KO
   ARTICLE_LIST_DATE_FORMAT: "%m월 %d일"
   STATISTICS              : "전체 글 [POST_COUNT]개, [PAGE_COUNT] 페이지"
   LICENSE_ANNOUNCE        : "이 글의 저작권은 [LICENSE] 라이센스를 따릅니다."
-  POST_ON_GITHUB          : "Github에서 확인하기"
+  POST_ON_GITHUB          : "GitHub에서 확인하기"
   FOLLOW_ME               : "[NAME]에서 팔로우하기"
   FOLLOW_US               : "[NAME]에서 팔로우하기"
   EMAIL_ME                : "이메일 보내기"
@@ -126,7 +126,7 @@ fr: &FR
   ARTICLE_LIST_DATE_FORMAT: "%d %b"
   STATISTICS              : "[POST_COUNT] articles, [PAGE_COUNT] pages."
   LICENSE_ANNOUNCE        : "Ce travail est sous licence [LICENSE]."
-  POST_ON_GITHUB          : "Modifier sur Github"
+  POST_ON_GITHUB          : "Modifier sur GitHub"
   FOLLOW_ME               : "Suivez-moi sur [NAME]."
   FOLLOW_US               : "Suivez-nous sur [NAME]."
   EMAIL_ME                : "Envoyez-moi un courriel."
@@ -159,7 +159,7 @@ tr: &TR
   ARTICLE_LIST_DATE_FORMAT: "%d %b"
   STATISTICS              : "Toplam [POST_COUNT] adet gönderim ve [PAGE_COUNT] adet sayfa bulunuyor."
   LICENSE_ANNOUNCE        : "Bu içerik [LICENSE] ile lisanslanmıştır."
-  POST_ON_GITHUB          : "Github üzerinde düzenle"
+  POST_ON_GITHUB          : "GitHub üzerinde düzenle"
   FOLLOW_ME               : "Beni [NAME] üzerinden takip et."
   FOLLOW_US               : "Bizi [NAME] üzerinden takip edin."
   EMAIL_ME                : "Bana email ile ulaşın."
