--- a/.github/workflows/update_members.yml
+++ b/.github/workflows/update_members.yml
@@ -26,24 +26,26 @@ jobs:
       - name: Run update_members.py
         run: python update_members.py
 
-      - name: Upload members.xlsx
-        uses: actions/upload-artifact@v3
-        with:
-          name: members-excel
-          path: members.xlsx
-
-      - name: Upload members.html
-        uses: actions/upload-artifact@v3
-        with:
-          name: members-html
-          path: members.html
-
-      - name: Commit updated members.html to docs/
+      - name: Move members.html to docs/ and commit
         run: |
           mkdir -p docs
           mv members.html docs/
           git config --global user.name "github-actions"
           git config --global user.email "github-actions@github.com"
           git add docs/members.html
-          git commit -m "Update members.html"
-          git push || echo "Nothing to commit"
+          git commit -m "Update members.html" || echo "No changes to commit"
+          git push
+
+      - name: Upload members.xlsx as artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: members-excel
+          path: members.xlsx
+          overwrite: true
+
+      - name: Upload members.html as artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: members-html
+          path: docs/members.html
+          overwrite: true
