--- a/.github/workflows/update_members.yml
+++ b/.github/workflows/update_members.yml
@@ -23,8 +23,8 @@ jobs:
       - name: Install dependencies
         run: pip install requests pandas scipy openpyxl
 
-      - name: Run update_members.py
-        run: python scripts/update_members.py
+      - name: Run fetch_bsgou_members.py
+        run: python scripts/fetch_bsgou_members.py
 
       - name: Move members.html to docs/ and commit
         run: |
